--- a/DataStyle.css
+++ b/DataStyle.css
@@ -24,21 +24,13 @@ body {
     background-color:azure;
 }
 
-#Chart{
-    border: 3px solid #6379e7;
-    max-width: 100%;
-    height: auto;
-    display: block;
+table, th, td {
+    border: 1px solid black;
+    text-align: center;
+    font-size: 14px;
+  }
+
+table {
     margin-left: auto;
     margin-right: auto;
-}
-
-#Description{
-    border: 3px solid #6379e7;
-    text-align: center;
-}
-
-.p {
-    font-size: 16px;
-    font-family: Georgia, serif;
 }
