--- a/LandingStyle.css
+++ b/LandingStyle.css
@@ -2,6 +2,8 @@
     overflow: hidden;
     background-color: #3c3782;
     font-family: Georgia;
+    align-content: right;
+    position: sticky;
 }
 
 .navbar a {
@@ -18,3 +20,31 @@
     overflow: hidden;
 }
 
+.header {
+    align-content: center;
+    font-size: 34px;
+}
+
+
+#paragraph {
+    border: 3px solid #6379e7;
+}
+
+#Visualization-Bar {
+    position: absolute;
+    top: 11%;
+    right: 0;
+    display: grid;
+    align-content: center;
+    background-color: #6379e7;
+    font-family: Georgia;
+    text-align: top;
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+    overflow: hidden;
+}
+
+body {
+    background-color:azure;
+}
