--- a/LandingStyle.css
+++ b/LandingStyle.css
@@ -1,5 +1,5 @@
 .navbar {
-    overflow: hidden;
+    overflow: visible;
     background-color: #3c3782;
     font-family: Georgia;
     align-content: right;
@@ -8,7 +8,7 @@
 
 .navbar a {
     float: right;
-    overflow: hidden;
+    overflow: visible;
     text-align: left;
     font-size: 16px;
     color: white;
@@ -16,8 +16,10 @@
 }
 
 .dropdown {
-    float: right;
+    float: visible;
+    display: block;
     overflow: hidden;
+    visibility: visible;
 }
 
 .header {
